[tool.poetry]
name = "westworld"
version = "0.1.3"
description = "Multi-agent simulation library in Python"
authors = ["Theo Alves Da Costa <theo.alves.da.costa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
pandas = "^1.3.0"
numpy = ">=1.20.1"
matplotlib = "^3.4.2"
tqdm = "^4.61.2"
pygame = "^2.0.1"
scipy = "^1.7.1"
ffmpeg-python = "^0.2.0"
imageio = "^2.9.0"

[tool.poetry.dev-dependencies]
pywin32 = { version = "225", markers = "sys_platform == 'win32'" }
jupyter = "^1.0.0"
mkdocs = "^1.2.1"
mkdocs-material = "^7.1.10"
mknotebooks = "^0.7.0"
mkdocstrings = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 200